--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,102 @@
   width: 160px;
   height: 160px;
 }
+
+/* ......... footer>>>>>>>> */
+
+
+
+/* Footer.css */
+
+
+footer {
+  background-color: #50514f;
+  color: white;
+}
+
+footer a {
+  color: #f8f9fa;
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #adb5bd;
+  text-decoration: underline;
+}
+
+footer .btn-light {
+  background-color: #f8f9fa;
+  color: #343a40;
+  border: none;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+/* Footer.css */
+footer {
+  background-color: #343a40; /* Dark background color */
+  color: white; /* White text color */
+  height: 450px; /* Set the footer height */
+}
+
+footer a {
+  color: #f8f9fa; /* Light link color */
+  text-decoration: none;
+}
+
+footer a:hover {
+  color: #1b5085; /* Slightly darker color on hover */
+  text-decoration: underline;
+}
+
+footer .btn-light {
+  background-color: #f8f9fa;
+  color: #343a40;
+  border: none;
+}
+
+/* CustomButton.css */
+.custom-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.custom-button {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #ffb6c1; /* Light pink background color */
+  color: black;
+  padding: 5px 100px;
+  border-radius: 20%; /* Fully rounded corners */
+  width: fit-content;
+}
+
+.custom-link {
+  color: black;
+  text-decoration: underline;
+}
+
+.custom-link:hover {
+  color: black;
+  text-decoration: none;
+}
+/* Footer.css */
+.footer-custom {
+  min-height: 300px;
+}
+
+.promotion-banner {
+  background-color: #ffb6c1; /* Light pink background color */
+  padding: 10px 20px;
+}
+
+.promotion-banner .text-dark {
+  text-decoration: underline;
+}
+
+.promotion-banner .text-dark:hover {
+  text-decoration: none;
+}
+
+/* .........  end footer>>>>>>>> */
