--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,7 @@
 .button:hover
 {
   background-color: white;
+  border: 1px solid black;
   color: black;
   transition: all 0.5s ease-in-out;
 }
@@ -226,7 +227,6 @@ footer .btn-light {
 }
 
 /* .........  end footer>>>>>>>> */
-
 /* product page */
 
 
@@ -547,6 +547,7 @@ footer .btn-light {
 {
   display: grid;
   grid-template-columns: repeat(3,1fr);
+  width: 950px;
   gap: 15px;
 }
 .card{
@@ -565,16 +566,11 @@ footer .btn-light {
   {
     display: grid;
     grid-template-columns: repeat(1,1fr);
-    margin-left: 0%;
-    margin-right: 10%;
-
+    width: 400px;
   }
   .product-category
 {
-  width: 200px;
-  
-  flex-wrap: wrap-reverse;
-
+  width: 300px;
 }
 .card
 {
@@ -609,10 +605,14 @@ footer .btn-light {
   {
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    margin-left: 0%;
-    margin-right: 0%;
-    display: flex;
-    flex-wrap: wrap;
+    width: 700px;
+    background-color: #1b5085;
+  }
+  
+  .product-category
+  {
+    width: 300px;
+    
   }
   .product-table
 {
@@ -625,24 +625,56 @@ footer .btn-light {
 }
 }
 @media (min-width:992px) and (max-width:1199px)
-{.promotion-banner {
+{
+  .product
+  {
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    width: 700px;
+  }
+  .promotion-banner {
   width: 450px;
   height: 50px;
   background-color: #ffb6c1; 
-}}
+}
+
+
+}
+@media (min-width:1200px) and (max-width:1400px)
+{
+  .product
+  {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    width: 850px;
+  }
+  .card{
+  width: 250px;
+ 
+}
+.card-image img
+{
+  width: 250px;
+}
+  .promotion-banner {
+  width: 450px;
+  height: 50px;
+  background-color: #ffb6c1; 
+}
+
+
+}
 @media (min-width:300px) and (max-width:566px)
 {
+  .product
+  {
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    width: 350px;
+  }
   .navbarSeach
 {
     display: none;
-}
-ul
-{
-  display: none;
-}
-.list-unstyled
-{
-  display: none;
 }
 .desck-home
 {
@@ -651,5 +683,13 @@ ul
 .desk-image{
   width: 800px;
   height: 630px;
+}
+.nav
+{
+  display: none;
+}
+.fratured
+{
+  display: block;
 }
 }
